# PipeShare

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pipeshare.service
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
src/: audio.rs  daemon.rs  dbus_monitor.rs  main.rs
